; ModuleID = '/home/carl/AnghaBench/linux/drivers/phy/marvell/extr_phy-armada38x-comphy.c_a38x_comphy_set_reg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/phy/marvell/extr_phy-armada38x-comphy.c_a38x_comphy_set_reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.a38x_comphy_lane = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.a38x_comphy_lane*, i32, i32, i32)* @a38x_comphy_set_reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @a38x_comphy_set_reg(%struct.a38x_comphy_lane* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.a38x_comphy_lane*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.a38x_comphy_lane* %0, %struct.a38x_comphy_lane** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load %struct.a38x_comphy_lane*, %struct.a38x_comphy_lane** %5, align 8
  %11 = getelementptr inbounds %struct.a38x_comphy_lane, %struct.a38x_comphy_lane* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i32, i32* %6, align 4
  %14 = zext i32 %13 to i64
  %15 = add nsw i64 %12, %14
  %16 = call i32 @readl_relaxed(i64 %15)
  %17 = load i32, i32* %7, align 4
  %18 = xor i32 %17, -1
  %19 = and i32 %16, %18
  store i32 %19, i32* %9, align 4
  %20 = load i32, i32* %9, align 4
  %21 = load i32, i32* %8, align 4
  %22 = or i32 %20, %21
  %23 = load %struct.a38x_comphy_lane*, %struct.a38x_comphy_lane** %5, align 8
  %24 = getelementptr inbounds %struct.a38x_comphy_lane, %struct.a38x_comphy_lane* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = load i32, i32* %6, align 4
  %27 = zext i32 %26 to i64
  %28 = add nsw i64 %25, %27
  %29 = call i32 @writel(i32 %22, i64 %28)
  ret void
}

declare dso_local i32 @readl_relaxed(i64) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
